package com.company;

public interface CanBeAPurpose {

    public void runForOrCatchingUp(CanBeAPursuer canBeAPursuer);
    public void toCatchUp(CanBeAPursuer canBeAPursuer);
    public double getDistanceToThePursuer();
    public void setDistanceToThePursuer(double distance);

}
