package com.company;

public interface CanBeAPursuer {

    public void toCheckTheDistanceToThePurpose(CanBeAPursuer canBeAPursuer);
    public double getDistanceToThePurpose();
    public void setDistanceToThePurpose(double distanceToThePurpose);
    public double getSpeed();
    public void getHurt();
}
